Update Jupyter Notebook for Challenge 3 to add Part 2

--- a/Jupyter/Challenge 3.ipynb
+++ b/Jupyter/Challenge 3.ipynb
@@ -55,6 +55,56 @@
     "answer = gammaRate * epsilonRate\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "input = [\"00100\", \"11110\", \"10110\", \"10111\", \"10101\", \"01111\", \"00111\", \"11100\", \"10000\", \"11001\", \"00010\", \"01010\"]\n",
+    "ox_gen = input\n",
+    "col = 0\n",
+    "while len(ox_gen) > 1:\n",
+    "    out = Counter([line[col] for line in ox_gen])\n",
+    "    if out[\"1\"] >= out[\"0\"]:\n",
+    "        most = \"1\"\n",
+    "    else:\n",
+    "        most = \"0\"\n",
+    "\n",
+    "    ox_gen = [line for line in ox_gen if line[col] == most]\n",
+    "    col += 1\n",
+    "\n",
+    "co2_scrubber = input\n",
+    "col = 0\n",
+    "while len(co2_scrubber) > 1:\n",
+    "    out = Counter([line[col] for line in co2_scrubber])\n",
+    "    if out[\"1\"] < out[\"0\"]:\n",
+    "        least = \"1\"\n",
+    "    else:\n",
+    "        least = \"0\"\n",
+    "    co2_scrubber = [line for line in co2_scrubber if line[col] == least]\n",
+    "    col += 1\n",
+    "\n",
+    "print(int(ox_gen[0], 2) * int(co2_scrubber[0], 2))"
+   ]
   }
  ],
  "metadata": {
